remove Azure.AI.OpenAI dependency

--- a/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
+++ b/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.7</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.7</span></li><li><span>AgentChat.Example.Share, 0.2.7</span></li><li><span>AgentChat.GPT, 0.2.7</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.DotnetInteractiveFunction, 0.3.1</span></li><li><span>AgentChat.Example.Share, 0.3.1</span></li><li><span>AgentChat.OpenAI, 0.3.1</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -44,8 +44,7 @@
    "source": [
     "#i \"nuget:https://www.myget.org/F/agentchat/api/v3/index.json\"\n",
     "\n",
-    "#r \"nuget:AgentChat.Core,*-*\"\n",
-    "#r \"nuget:AgentChat.GPT,*-*\"\n",
+    "#r \"nuget:AgentChat.OpenAI,*-*\"\n",
     "#r \"nuget:AgentChat.Example.Share,*-*\"\n",
     "// this package provides FunctionDefinition for `dotnet-interactive` command\n",
     "#r \"nuget:AgentChat.DotnetInteractiveFunction,*-*\""
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -310,10 +309,6 @@
       "\n",
       "--------------------\n",
       "\n",
-      "function name: RunCode\n",
-      "raw function call: {\n",
-      "  \"code\": \"using System;\\r\\nusing System.Net.Http;\\r\\nusing System.Threading.Tasks;\\r\\n\\r\\nvar apiUrl = \\\"https://api.github.com/repos/dotnet/machinelearning/pulls\\\";\\r\\nvar userAgent = \\\"MyApp\\\";\\r\\n\\r\\nasync Task<string> GetPullRequests()\\r\\n{\\r\\n    using (var client = new HttpClient())\\r\\n    {\\r\\n        client.DefaultRequestHeaders.Add(\\\"User-Agent\\\", userAgent);\\r\\n        var response = await client.GetAsync(apiUrl);\\r\\n        response.EnsureSuccessStatusCode();\\r\\n        var responseBody = await response.Content.ReadAsStringAsync();\\r\\n        return responseBody;\\r\\n    }\\r\\n}\\r\\n\\r\\nvar pullRequests = await GetPullRequests();\\r\\nConsole.WriteLine(pullRequests);\"\n",
-      "}\n",
       "Message from Runner\n",
       "--------------------\n",
       "[{\"url\":\"https://api.github.com/repos/dotnet/machinelearning/pulls/6872\",\"id\":1568971683,\"node_id\":\" (...too long to present)\n",
@@ -369,10 +364,6 @@
       "\n",
       "--------------------\n",
       "\n",
-      "function name: RunCode\n",
-      "raw function call: {\n",
-      "  \"code\": \"using System;\\r\\nusing System.Net.Http;\\r\\nusing System.Text.Json;\\r\\nusing System.Threading.Tasks;\\r\\n\\r\\nvar apiUrl = \\\"https://api.github.com/repos/dotnet/machinelearning/pulls\\\";\\r\\nvar userAgent = \\\"MyApp\\\";\\r\\n\\r\\nasync Task<string> GetPullRequests()\\r\\n{\\r\\n    using (var client = new HttpClient())\\r\\n    {\\r\\n        client.DefaultRequestHeaders.Add(\\\"User-Agent\\\", userAgent);\\r\\n        var response = await client.GetAsync(apiUrl);\\r\\n        response.EnsureSuccessStatusCode();\\r\\n        var responseBody = await response.Content.ReadAsStringAsync();\\r\\n        return responseBody;\\r\\n    }\\r\\n}\\r\\n\\r\\nasync Task<string> GetLatestPullRequest()\\r\\n{\\r\\n    var pullRequests = await GetPullRequests();\\r\\n    var jsonDocument = JsonDocument.Parse(pullRequests);\\r\\n    var latestPullRequest = jsonDocument.RootElement[0];\\r\\n    return latestPullRequest.ToString();\\r\\n}\\r\\n\\r\\nvar latestPullRequest = await GetLatestPullRequest();\\r\\nConsole.WriteLine(latestPullRequest);\"\n",
-      "}\n",
       "Message from Runner\n",
       "--------------------\n",
       "{\"url\":\"https://api.github.com/repos/dotnet/machinelearning/pulls/6872\",\"id\":1568971683,\"node_id\":\"P (...too long to present)\n",
@@ -435,10 +426,6 @@
       "\n",
       "--------------------\n",
       "\n",
-      "function name: RunCode\n",
-      "raw function call: {\n",
-      "  \"code\": \"using System;\\r\\nusing System.IO;\\r\\nusing System.Net.Http;\\r\\nusing System.Text.Json;\\r\\nusing System.Threading.Tasks;\\r\\n\\r\\nvar apiUrl = \\\"https://api.github.com/repos/dotnet/machinelearning/pulls\\\";\\r\\nvar userAgent = \\\"MyApp\\\";\\r\\n\\r\\nasync Task<string> GetPullRequests()\\r\\n{\\r\\n    using (var client = new HttpClient())\\r\\n    {\\r\\n        client.DefaultRequestHeaders.Add(\\\"User-Agent\\\", userAgent);\\r\\n        var response = await client.GetAsync(apiUrl);\\r\\n        response.EnsureSuccessStatusCode();\\r\\n        var responseBody = await response.Content.ReadAsStringAsync();\\r\\n        return responseBody;\\r\\n    }\\r\\n}\\r\\n\\r\\nasync Task<string> GetLatestPullRequest()\\r\\n{\\r\\n    var pullRequests = await GetPullRequests();\\r\\n    var jsonDocument = JsonDocument.Parse(pullRequests);\\r\\n    var latestPullRequest = jsonDocument.RootElement[0];\\r\\n    return latestPullRequest.ToString();\\r\\n}\\r\\n\\r\\nasync Task PrintAndSavePullRequest()\\r\\n{\\r\\n    var latestPullRequest = await GetLatestPullRequest();\\r\\n    Console.WriteLine(latestPullRequest);\\r\\n    File.WriteAllText(\\\"pr.txt\\\", latestPullRequest);\\r\\n}\\r\\n\\r\\nawait PrintAndSavePullRequest();\"\n",
-      "}\n",
       "Message from Runner\n",
       "--------------------\n",
       "{\"url\":\"https://api.github.com/repos/dotnet/machinelearning/pulls/6872\",\"id\":1568971683,\"node_id\":\"P (...too long to present)\n",
@@ -468,32 +455,28 @@
       "\n",
       "Message from Runner\n",
       "--------------------\n",
-      "Thank you for your feedback! I'm glad I could help. If you have any other tasks or need assistance in the future, don't hesitate to reach out. Have a great day!\n",
+      "Thank you for your feedback! I'm glad I could help. If you have any more tasks or need assistance in the future, don't hesitate to reach out. Have a great day!\n",
       "--------------------\n",
       "\n",
       "Message from Admin\n",
       "--------------------\n",
-      "Thank you, Runner! I appreciate your help and willingness to assist. If there are any other tasks or projects in the future, I will definitely reach out to you. Have a wonderful day!\n",
+      "Thank you, Runner! I appreciate your help and willingness to assist. If there are any more tasks or if you need any assistance in the future, feel free to reach out. Have a wonderful day!\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Coder\n",
       "--------------------\n",
-      "Thank you both for your collaboration! It was a pleasure working with you. If you need any further assistance or have any other tasks in the future, feel free to reach out. Have a great day!\n",
+      "Thank you both for your collaboration! It was a pleasure working with you. If there are any more tasks or if you need any assistance in the future, feel free to let me know. Have a fantastic day!\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Admin\n",
       "--------------------\n",
-      "Thank you, Coder! It was a pleasure working with you as well. Your collaboration and assistance were greatly appreciated. If there are any other tasks or projects in the future, I will definitely reach out to you. Have a fantastic day!\n",
+      "Thank you, Coder! It was a pleasure working with you as well. Your collaboration and assistance were greatly appreciated. If there are any more tasks or if we need your expertise in the future, we will definitely reach out. Have a fantastic day!\n",
       "\n",
       "\n",
       "--------------------\n",
       "\n",
-      "function name: TerminateGroupChat\n",
-      "raw function call: {\n",
-      "  \"message\": \"Group chat terminated.\"\n",
-      "}\n",
       "Message from Admin\n",
       "--------------------\n",
       "[GROUPCHAT_TERMINATE]: Group chat terminated.\n",
