--- a/notebook/TwoAgentChat_MathClass.ipynb
+++ b/notebook/TwoAgentChat_MathClass.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.5</span></li><li><span>AgentChat.GPT, 0.2.5</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.3.1</span></li><li><span>AgentChat.OpenAI, 0.3.1</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -36,7 +36,7 @@
     "#i \"nuget:https://www.myget.org/F/agentchat/api/v3/index.json\"\n",
     "\n",
     "#r \"nuget:AgentChat.Core,*-*\"\n",
-    "#r \"nuget:AgentChat.GPT,*-*\""
+    "#r \"nuget:AgentChat.OpenAI,*-*\""
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -143,24 +143,24 @@
       "--------------------\n",
       "Great! Here's the first question:\n",
       "\n",
-      "What is 2 + 3?\n",
+      "Question 1: How many sides does a triangle have?\n",
       "\n",
       "Please provide your answer.\n",
       "--------------------\n",
       "\n",
       "Message from Bob\n",
       "--------------------\n",
-      "The answer to 2 + 3 is 5.\n",
+      "A triangle has three sides. \n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Alice\n",
       "--------------------\n",
-      "That's correct! Well done!\n",
+      "That's correct! A triangle indeed has three sides. Well done!\n",
       "\n",
-      "Now, here's the second question:\n",
+      "Now, let's move on to the next question:\n",
       "\n",
-      "What is 4 - 2?\n",
+      "Question 2: How many legs does a spider have?\n",
       "\n",
       "Please provide your answer.\n",
       "\n",
@@ -168,18 +168,18 @@
       "\n",
       "Message from Bob\n",
       "--------------------\n",
-      "The answer to 4 - 2 is 2.\n",
+      "A spider typically has eight legs.\n",
       "\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Alice\n",
       "--------------------\n",
-      "Great job! You're doing well!\n",
+      "That's correct! A spider typically has eight legs. Good job!\n",
       "\n",
-      "Now, here's the third and final question:\n",
+      "Now, let's move on to the final question:\n",
       "\n",
-      "What is 3 x 2?\n",
+      "Question 3: How many corners does a square have?\n",
       "\n",
       "Please provide your answer.\n",
       "\n",
@@ -188,20 +188,18 @@
       "\n",
       "Message from Bob\n",
       "--------------------\n",
-      "The answer to 3 x 2 is 6.\n",
+      "A square has four corners.\n",
       "\n",
       "\n",
       "--------------------\n",
       "\n",
       "Message from Alice\n",
       "--------------------\n",
-      "Fantastic! You got it right again!\n",
+      "That's correct! A square indeed has four corners. Well done!\n",
       "\n",
-      "Congratulations on answering all the math questions correctly! You did a great job!\n",
+      "Congratulations, you have answered all the math questions correctly. You did a fantastic job! Keep up the great work!\n",
       "\n",
-      "Keep up the good work and continue practicing your math skills. If you have any more questions or need help with anything else, feel free to ask.\n",
-      "\n",
-      "Have a wonderful day!\n",
+      "If you have any more questions or need further assistance, feel free to ask. Otherwise, have a wonderful day!\n",
       "\n",
       "[GROUPCHAT_TERMINATE]\n",
       "--------------------\n",
@@ -231,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
