--- a/notebook/TwoAgentChat_UserProxy.ipynb
+++ b/notebook/TwoAgentChat_UserProxy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.6</span></li><li><span>AgentChat.Example.Share, 0.2.6</span></li><li><span>AgentChat.GPT, 0.2.6</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.3.1</span></li><li><span>AgentChat.Example.Share, 0.3.1</span></li><li><span>agentchat.openai, 0.3.1</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -45,7 +45,7 @@
     "#i \"nuget:https://www.myget.org/F/agentchat/api/v3/index.json\"\n",
     "\n",
     "#r \"nuget:AgentChat.Core,*-*\"\n",
-    "#r \"nuget:AgentChat.GPT,*-*\"\n",
+    "#r \"nuget:AgentChat.OpenAI,*-*\"\n",
     "#r \"nuget:AgentChat.Example.Share,*-*\""
    ]
   },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -91,7 +91,7 @@
     "    {\n",
     "        var input = await Kernel.GetInputAsync();\n",
     "\n",
-    "        return new Message(ChatRole.Assistant, input, null, this.Name);\n",
+    "        return new Message(Role.Assistant, input, this.Name);\n",
     "    }\n",
     "}"
    ]
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -118,17 +118,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "(2,17): error CS0234: The type or namespace name 'Core' does not exist in the namespace 'AgentChat' (are you missing an assembly reference?)\r\n(4,21): error CS0246: The type or namespace name 'UserAgent' could not be found (are you missing a using directive or an assembly reference?)",
-     "output_type": "error",
-     "traceback": [
-      "(2,17): error CS0234: The type or namespace name 'Core' does not exist in the namespace 'AgentChat' (are you missing an assembly reference?)\r\n",
-      "(4,21): error CS0246: The type or namespace name 'UserAgent' could not be found (are you missing a using directive or an assembly reference?)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using AgentChat.Example.Share;\n",
     "var userAgent = new UserAgent(\"Human\");\n",
@@ -146,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -160,12 +150,24 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(1,26): error CS0103: The name 'userAgent' does not exist in the current context\r\n(2,15): error CS0103: The name 'gptAgent' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,26): error CS0103: The name 'userAgent' does not exist in the current context\r\n",
-      "(2,15): error CS0103: The name 'gptAgent' does not exist in the current context"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message from GPT\n",
+      "--------------------\n",
+      "Hello! How can I assist you today?\n",
+      "--------------------\n",
+      "\n",
+      "Message from Human\n",
+      "--------------------\n",
+      "hy\n",
+      "--------------------\n",
+      "\n",
+      "Message from GPT\n",
+      "--------------------\n",
+      "Hello! How can I assist you today?\n",
+      "--------------------\n",
+      "\n"
      ]
     }
    ],
