--- a/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
+++ b/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
@@ -81,6 +81,7 @@
     "using AgentChat.Example.Share;\n",
     "using AgentChat;\n",
     "using Azure.AI.OpenAI;\n",
+    "using AgentChat.OpenAI;\n",
     "\n",
     "var groupChatFunction = new GroupChatFunction();\n",
     "var admin = Constant.GPT35.CreateAgent(\n",
