--- a/notebook/TwoAgentChat_Coding.ipynb
+++ b/notebook/TwoAgentChat_Coding.ipynb
@@ -79,6 +79,7 @@
     "using AgentChat;\n",
     "using System.Text.Json;\n",
     "using Azure.AI.OpenAI;\n",
+    "using AgentChat.OpenAI;\n",
     "\n",
     "var completeFunction = new FunctionDefinition{\n",
     "    Name = \"TaskComplete\",\n",
