--- a/notebook/TwoAgentChat_MathClass.ipynb
+++ b/notebook/TwoAgentChat_MathClass.ipynb
@@ -63,6 +63,7 @@
    "outputs": [],
    "source": [
     "using AgentChat;\n",
+    "using AgentChat.OpenAI;\n",
     "\n",
     "var azureAPIKey = Environment.GetEnvironmentVariable(\"AZURE_OPENAI_API_KEY\");\n",
     "var azureEndpoint = Environment.GetEnvironmentVariable(\"AZURE_OPENAI_ENDPOINT\");\n",
