--- a/notebook/TwoAgentChat_UserProxy.ipynb
+++ b/notebook/TwoAgentChat_UserProxy.ipynb
@@ -77,6 +77,7 @@
     "using Microsoft.DotNet.Interactive;\n",
     "using Azure.AI.OpenAI;\n",
     "using AgentChat;\n",
+    "using AgentChat.OpenAI;\n",
     "\n",
     "public class UserAgent : IAgent\n",
     "{\n",
