--- a/notebook/AutoReplyAgent.ipynb
+++ b/notebook/AutoReplyAgent.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "`AutoReplyAgent` is a special agent in `AgentChat` that created on top of an arbitray `IAgent`. It contains an inner agent and an auto-reply function. When replying, `AutoReplyAgent` will first call the auto-reply function to generate a reply. If the auto-reply function returns a reply, the reply will be used as the reply of the `AutoReplyAgent`. Otherwise, the inner agent will be called to generate a reply.\n",
     "\n",
-    "`AutoReplyAgent` is useful when you want to have more control over how an agent replies under some circumstances. Or when you want to create a more general purpose agent that can reply to a wider range of messages on top of a list of task-specific agents.\n",
+    "`AutoReplyAgent` is useful when you want an agent to reply in a specific way under certain cases. It can also be used to create multi-task agent by combining multiple agents into a single `AutoReplyAgent`.\n",
     "\n",
     "In this notebook, we will first introduce the basic usage of `AutoReplyAgent`. We will first show how to create an `AutoReplyAgent` that always use auto-reply function to generate a reply. Then we will show how to create an `AutoReplyAgent` that only use auto-reply function under certain conditions and uses its inner agent otherwise. Finally, we will show how to combine multiple agents into a single `AutoReplyAgent` to accomplish a more general purpose."
    ]
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scenario 1: I want to create an agent that can detect python and csharp code block. And reply 'no code block found' if no code block is detected.\n",
+    "### Code detection task: I want to create an agent that can detect python and csharp code block. And reply 'no code block found' if no code block is detected.\n",
     "\n",
     "It's difficult to use a single agent to deal with different situations. The first challenge is to write an appropriate system prompt that work for all the situations. The second challenge is the increase complexity of prompt might make the llm response less robust.\n",
     "\n",
