--- a/notebook/AutoReplyAgent.ipynb
+++ b/notebook/AutoReplyAgent.ipynb
@@ -6,9 +6,11 @@
    "source": [
     "### AutoReplyAgent\n",
     "\n",
-    "You can use `AutoReplyAgent` to extend an `IAgent` with a auto-reply function. The auto-reply function takes in the current conversation and returns a reply, and will be called before the conversation flows to the `IAgent`. If the auto-reply function returns a reply, the reply will be used as the reply of the `IAgent`, otherwise if the auto-reply function return a `null`, the `IAgent` will be called to generate a reply.\n",
+    "`AutoReplyAgent` is a special agent in `AgentChat` that created on top of an arbitray `IAgent`. It contains an inner agent and an auto-reply function. When replying, `AutoReplyAgent` will first call the auto-reply function to generate a reply. If the auto-reply function returns a reply, the reply will be used as the reply of the `AutoReplyAgent`. Otherwise, the inner agent will be called to generate a reply.\n",
     "\n",
-    "In this notebook, we will show a few examples of using `AutoReplyAgent`.\n"
+    "`AutoReplyAgent` is useful when you want an agent to reply in a specific way under certain cases. It can also be used to create multi-task agent by combining multiple agents into a single `AutoReplyAgent`.\n",
+    "\n",
+    "In this notebook, we will first introduce the basic usage of `AutoReplyAgent`. We will first show how to create an `AutoReplyAgent` that always use auto-reply function to generate a reply. Then we will show how to create an `AutoReplyAgent` that only use auto-reply function under certain conditions and uses its inner agent otherwise. Finally, we will show how to combine multiple agents into a single `AutoReplyAgent` to accomplish a more general purpose."
    ]
   },
   {
@@ -50,9 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. use auto-reply to respond under all circumstances\n",
+    "### 1. Create an `AutoReplyAgent` that always use auto-reply function to generate a reply\n",
     "\n",
-    "To use auto-reply to respond under all circumstances, we can simply return a reply in the auto-reply function."
+    "To prevent the inner agent from generating a reply, we just need to make sure the auto-reply function always returns a reply."
    ]
   },
   {
@@ -101,6 +103,7 @@
     "var autoReplyAgent = agent.CreateAutoReplyAgent(\n",
     "    name: \"autoReply\",\n",
     "    autoReplyMessageFunc: async (message, ct) => {\n",
+    "        // The autoReplyMessageFunc always return a message, therefore the inner agent will never be called.\n",
     "        return new Message(Role.Assistant, \"I don't want to talk to you\", from: \"autoReply\");\n",
     "    });\n",
     "\n",
@@ -116,7 +119,8 @@
    "metadata": {},
    "source": [
     "### 2. use auto-reply to respond under certain circumstances\n",
-    "If we only want to use auto-reply to respond under certain circumstances, we can return a reply only when the conversation meets certain conditions. And if the conversation does not meet the conditions, we can return a `null` to let the `IAgent` to generate a reply."
+    "\n",
+    "In most of the cases, we only want to use auto-reply function to generate a reply under certain circumstances. To achieve this, we can return 'null' from the auto-reply function to indicate that the auto-reply function does not generate a reply. In this case, the inner agent will be called next to generate a reply."
    ]
   },
   {
@@ -180,11 +184,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scenario 1: I want to create an agent that can detect python and csharp code block. And reply 'no code block found' if no code block is detected.\n",
+    "### Code detection task: I want to create an agent that can detect python and csharp code block. And reply 'no code block found' if no code block is detected.\n",
     "\n",
-    "Of course it's possible to implement this using a deligate llm system message, but it's challenging to create a system message that can handle multiple code-block detection.\n",
+    "It's difficult to use a single agent to deal with different situations. The first challenge is to write an appropriate system prompt that work for all the situations. The second challenge is the increase complexity of prompt might make the llm response less robust.\n",
     "\n",
-    "With `AutoReplyAgent`, `AgentChat` allows you to create multiple `IAgent`, where each `IAgent` only handle a single, specific task. And then create an `AutoReplyAgent` to combine all the `IAgent` together and process multiple tasks."
+    "To address this issue, we can create multiple agents to deal with different situations. Then we can combine these agents into a single `AutoReplyAgent` to create a more general purpose agent. In the below example, we present how to use an `AutoReplyAgent` to combine two agents that can detect python and csharp code block respectively into a single agent."
    ]
   },
   {
@@ -220,6 +224,7 @@
     }
    ],
    "source": [
+    "// python detect agent only detect if the last message contains python code block\n",
     "var pythonDetectAgent = Constant.GPT35.CreateAgent(\n",
     "    \"python\",\n",
     "    @\"You are a helpful AI assistant, you detect if the last message contains python code block.\n",
@@ -274,6 +279,7 @@
     }
    ],
    "source": [
+    "// csharp detect agent only detect if the last message contains csharp code block\n",
     "var csharpDetectAgent = Constant.GPT35.CreateAgent(\n",
     "    \"csharp\",\n",
     "    @\"You are a helpful AI assistant, you detect if the last message contains csharp code block.\n",
@@ -316,6 +322,7 @@
     "    roleInformation: \"You reply 'No code found' in any case\",\n",
     "    temperature: 0);\n",
     "\n",
+    "// combine all the agents together to complete the code detection task.\n",
     "var alice = agent.CreateAutoReplyAgent(\n",
     "    name: \"Alice\",\n",
     "    autoReplyMessageFunc: async (messages, ct) => {\n",
